# dsupdater

./: pyproject.toml
.github/workflows/: docs.yml
src/dsupdater/: shell_helper.py  update_manager.py  updater.py
src/dsupdater/updaters/: chezmoi.py  docker_compose.py  dsbin.py  homebrew.py  mac_app_store.py  macos.py  python_pip.py
src/dsupdater/updaters/linux/: apt.py  dnf.py  pacman.py
