[project]
name = "dsupdater"
version = "0.1.0"
description = "Multi-platform system updater script"
authors = [
    {name = "Danny Stewart",email = "danny@stewart.cc"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
